// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePowerSourcesGraphData > appends current state when showing today 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(255, 152, 0, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(255, 152, 0, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#ff9800",
      "data": [
        {
          "value": [
            1704069000000,
            25.629,
          ],
        },
        {
          "value": [
            1704072600000,
            27.451,
          ],
        },
        {
          "value": [
            1704076200000,
            27.014,
          ],
        },
        {
          "value": [
            1704079800000,
            25.084,
          ],
        },
        {
          "value": [
            1704083400000,
            24.553,
          ],
        },
        {
          "value": [
            1704087000000,
            25.488,
          ],
        },
        {
          "value": [
            1704090600000,
            26.81,
          ],
        },
        {
          "value": [
            1704094200000,
            28.577,
          ],
        },
        {
          "value": [
            1704097800000,
            26.752,
          ],
        },
        {
          "value": [
            1704101400000,
            27.285,
          ],
        },
        {
          "value": [
            1704105000000,
            26.431,
          ],
        },
        {
          "value": [
            1704108600000,
            24.77,
          ],
        },
        {
          "value": [
            1704110400000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            24.625,
          ],
        },
        {
          "value": [
            1704115800000,
            24.015,
          ],
        },
        {
          "value": [
            1704119400000,
            24.512,
          ],
        },
        {
          "value": [
            1704123000000,
            24.133,
          ],
        },
        {
          "value": [
            1704126600000,
            25.729,
          ],
        },
        {
          "value": [
            1704130200000,
            27.302,
          ],
        },
        {
          "value": [
            1704133800000,
            27.757,
          ],
        },
        {
          "value": [
            1704137400000,
            27.496,
          ],
        },
        {
          "value": [
            1704141000000,
            26.052,
          ],
        },
        {
          "value": [
            1704144600000,
            27.647,
          ],
        },
        {
          "value": [
            1704148200000,
            27.547,
          ],
        },
        {
          "value": [
            1704151800000,
            28.51,
          ],
        },
      ],
      "id": "solar",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 3,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            20.757,
          ],
        },
        {
          "value": [
            1704072600000,
            22.578,
          ],
        },
        {
          "value": [
            1704076200000,
            23.548,
          ],
        },
        {
          "value": [
            1704079800000,
            23.662,
          ],
        },
        {
          "value": [
            1704083400000,
            21.662,
          ],
        },
        {
          "value": [
            1704087000000,
            22.376,
          ],
        },
        {
          "value": [
            1704090600000,
            21.254,
          ],
        },
        {
          "value": [
            1704094200000,
            21.288,
          ],
        },
        {
          "value": [
            1704097800000,
            20.345,
          ],
        },
        {
          "value": [
            1704101400000,
            20.134,
          ],
        },
        {
          "value": [
            1704105000000,
            21.328,
          ],
        },
        {
          "value": [
            1704108600000,
            22.513,
          ],
        },
        {
          "value": [
            1704110400000,
            0.2,
          ],
        },
        {
          "value": [
            1704112200000,
            22.476,
          ],
        },
        {
          "value": [
            1704115800000,
            22.221,
          ],
        },
        {
          "value": [
            1704119400000,
            24.082,
          ],
        },
        {
          "value": [
            1704123000000,
            24.261,
          ],
        },
        {
          "value": [
            1704126600000,
            24.536,
          ],
        },
        {
          "value": [
            1704130200000,
            23.372,
          ],
        },
        {
          "value": [
            1704133800000,
            23.126,
          ],
        },
        {
          "value": [
            1704137400000,
            24.652,
          ],
        },
        {
          "value": [
            1704141000000,
            24.863,
          ],
        },
        {
          "value": [
            1704144600000,
            23.897,
          ],
        },
        {
          "value": [
            1704148200000,
            23.139,
          ],
        },
        {
          "value": [
            1704151800000,
            24.545,
          ],
        },
      ],
      "id": "battery",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 2,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            23.078,
          ],
        },
        {
          "value": [
            1704072600000,
            22.325,
          ],
        },
        {
          "value": [
            1704076200000,
            22.661,
          ],
        },
        {
          "value": [
            1704079800000,
            22.492,
          ],
        },
        {
          "value": [
            1704083400000,
            24.038,
          ],
        },
        {
          "value": [
            1704087000000,
            25.978,
          ],
        },
        {
          "value": [
            1704090600000,
            25.765,
          ],
        },
        {
          "value": [
            1704094200000,
            26.15,
          ],
        },
        {
          "value": [
            1704097800000,
            24.996,
          ],
        },
        {
          "value": [
            1704101400000,
            26.327,
          ],
        },
        {
          "value": [
            1704105000000,
            24.911,
          ],
        },
        {
          "value": [
            1704108600000,
            23.771,
          ],
        },
        {
          "value": [
            1704110400000,
            1.5,
          ],
        },
        {
          "value": [
            1704112200000,
            25.436,
          ],
        },
        {
          "value": [
            1704115800000,
            27.389,
          ],
        },
        {
          "value": [
            1704119400000,
            28.117,
          ],
        },
        {
          "value": [
            1704123000000,
            29.268,
          ],
        },
        {
          "value": [
            1704126600000,
            29.49,
          ],
        },
        {
          "value": [
            1704130200000,
            27.878,
          ],
        },
        {
          "value": [
            1704133800000,
            26.712,
          ],
        },
        {
          "value": [
            1704137400000,
            27.611,
          ],
        },
        {
          "value": [
            1704141000000,
            29.039,
          ],
        },
        {
          "value": [
            1704144600000,
            28.065,
          ],
        },
        {
          "value": [
            1704148200000,
            30.035,
          ],
        },
        {
          "value": [
            1704151800000,
            28.845,
          ],
        },
      ],
      "id": "grid",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 1,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704110400000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "battery-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 4,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704110400000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "grid-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 3,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          69.464,
        ],
        [
          1704072600000,
          72.354,
        ],
        [
          1704076200000,
          73.223,
        ],
        [
          1704079800000,
          71.238,
        ],
        [
          1704083400000,
          70.253,
        ],
        [
          1704087000000,
          73.84200000000001,
        ],
        [
          1704090600000,
          73.82900000000001,
        ],
        [
          1704094200000,
          76.015,
        ],
        [
          1704097800000,
          72.09299999999999,
        ],
        [
          1704101400000,
          73.746,
        ],
        [
          1704105000000,
          72.67,
        ],
        [
          1704108600000,
          71.054,
        ],
        [
          1704110400000,
          1.7,
        ],
        [
          1704112200000,
          72.537,
        ],
        [
          1704115800000,
          73.625,
        ],
        [
          1704119400000,
          76.711,
        ],
        [
          1704123000000,
          77.662,
        ],
        [
          1704126600000,
          79.755,
        ],
        [
          1704130200000,
          78.55199999999999,
        ],
        [
          1704133800000,
          77.595,
        ],
        [
          1704137400000,
          79.759,
        ],
        [
          1704141000000,
          79.95400000000001,
        ],
        [
          1704144600000,
          79.609,
        ],
        [
          1704148200000,
          80.721,
        ],
        [
          1704151800000,
          81.9,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "solar",
      "itemStyle": {
        "borderColor": "#ff9800",
        "color": "rgba(255, 152, 0, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "secondaryIds": [],
    },
    {
      "id": "grid",
      "itemStyle": {
        "borderColor": "#488fc2",
        "color": "rgba(72, 143, 194, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "secondaryIds": [
        "grid-negative",
      ],
    },
    {
      "id": "battery",
      "itemStyle": {
        "borderColor": "#4db6ac",
        "color": "rgba(77, 182, 172, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "secondaryIds": [
        "battery-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;

exports[`generatePowerSourcesGraphData > does not append current state when not showing today 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(255, 152, 0, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(255, 152, 0, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#ff9800",
      "data": [
        {
          "value": [
            1704069000000,
            19.466,
          ],
        },
        {
          "value": [
            1704072600000,
            18.504,
          ],
        },
        {
          "value": [
            1704076200000,
            19.009,
          ],
        },
        {
          "value": [
            1704079800000,
            17.428,
          ],
        },
        {
          "value": [
            1704083400000,
            18.249,
          ],
        },
        [
          1704087000000,
          0,
        ],
        {
          "value": [
            1704090600000,
            17.497,
          ],
        },
        {
          "value": [
            1704094200000,
            16.768,
          ],
        },
        {
          "value": [
            1704097800000,
            16.744,
          ],
        },
        {
          "value": [
            1704101400000,
            18.692,
          ],
        },
        {
          "value": [
            1704105000000,
            20.612,
          ],
        },
        {
          "value": [
            1704108600000,
            18.759,
          ],
        },
        {
          "value": [
            1704112200000,
            19.398,
          ],
        },
        {
          "value": [
            1704115800000,
            20.992,
          ],
        },
        {
          "value": [
            1704119400000,
            22.625,
          ],
        },
        {
          "value": [
            1704123000000,
            24.455,
          ],
        },
        {
          "value": [
            1704126600000,
            22.682,
          ],
        },
        {
          "value": [
            1704130200000,
            20.911,
          ],
        },
        {
          "value": [
            1704133800000,
            22.75,
          ],
        },
        {
          "value": [
            1704137400000,
            24.433,
          ],
        },
        {
          "value": [
            1704141000000,
            22.825,
          ],
        },
        {
          "value": [
            1704144600000,
            21.653,
          ],
        },
        {
          "value": [
            1704148200000,
            23.493,
          ],
        },
        {
          "value": [
            1704151800000,
            23.745,
          ],
        },
      ],
      "id": "solar",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 3,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            28.359,
          ],
        },
        {
          "value": [
            1704072600000,
            30.201,
          ],
        },
        {
          "value": [
            1704076200000,
            30.923,
          ],
        },
        {
          "value": [
            1704079800000,
            32.527,
          ],
        },
        {
          "value": [
            1704083400000,
            33.448,
          ],
        },
        {
          "value": [
            1704087000000,
            33.132,
          ],
        },
        {
          "value": [
            1704090600000,
            32.248,
          ],
        },
        {
          "value": [
            1704094200000,
            30.329,
          ],
        },
        {
          "value": [
            1704097800000,
            29.274,
          ],
        },
        {
          "value": [
            1704101400000,
            29.794,
          ],
        },
        {
          "value": [
            1704105000000,
            31.746,
          ],
        },
        {
          "value": [
            1704108600000,
            31.671,
          ],
        },
        {
          "value": [
            1704112200000,
            30.88,
          ],
        },
        {
          "value": [
            1704115800000,
            32.435,
          ],
        },
        {
          "value": [
            1704119400000,
            33.843,
          ],
        },
        {
          "value": [
            1704123000000,
            34.77,
          ],
        },
        {
          "value": [
            1704126600000,
            34.756,
          ],
        },
        {
          "value": [
            1704130200000,
            33.797,
          ],
        },
        {
          "value": [
            1704133800000,
            35.68,
          ],
        },
        {
          "value": [
            1704137400000,
            35.199,
          ],
        },
        [
          1704141000000,
          0,
        ],
        {
          "value": [
            1704144600000,
            34.581,
          ],
        },
        {
          "value": [
            1704148200000,
            33.422,
          ],
        },
        [
          1704151800000,
          0,
        ],
      ],
      "id": "battery",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 2,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            20.568,
          ],
        },
        {
          "value": [
            1704072600000,
            20.848,
          ],
        },
        {
          "value": [
            1704076200000,
            18.954,
          ],
        },
        {
          "value": [
            1704079800000,
            20.899,
          ],
        },
        {
          "value": [
            1704083400000,
            19.576,
          ],
        },
        {
          "value": [
            1704087000000,
            20.392,
          ],
        },
        {
          "value": [
            1704090600000,
            18.867,
          ],
        },
        {
          "value": [
            1704094200000,
            17.674,
          ],
        },
        {
          "value": [
            1704097800000,
            16.719,
          ],
        },
        {
          "value": [
            1704101400000,
            15.644,
          ],
        },
        {
          "value": [
            1704105000000,
            17.207,
          ],
        },
        {
          "value": [
            1704108600000,
            16.243,
          ],
        },
        {
          "value": [
            1704112200000,
            14.298,
          ],
        },
        {
          "value": [
            1704115800000,
            14.482,
          ],
        },
        {
          "value": [
            1704119400000,
            15.453,
          ],
        },
        {
          "value": [
            1704123000000,
            14.8,
          ],
        },
        {
          "value": [
            1704126600000,
            15.344,
          ],
        },
        {
          "value": [
            1704130200000,
            16.19,
          ],
        },
        {
          "value": [
            1704133800000,
            16.352,
          ],
        },
        {
          "value": [
            1704137400000,
            16.358,
          ],
        },
        {
          "value": [
            1704141000000,
            16.354,
          ],
        },
        {
          "value": [
            1704144600000,
            14.405,
          ],
        },
        {
          "value": [
            1704148200000,
            14.007,
          ],
        },
        {
          "value": [
            1704151800000,
            12.415,
          ],
        },
      ],
      "id": "grid",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 1,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        [
          1704141000000,
          0,
        ],
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        [
          1704151800000,
          0,
        ],
      ],
      "id": "battery-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 4,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "grid-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 3,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          68.393,
        ],
        [
          1704072600000,
          69.553,
        ],
        [
          1704076200000,
          68.886,
        ],
        [
          1704079800000,
          70.854,
        ],
        [
          1704083400000,
          71.273,
        ],
        [
          1704087000000,
          53.524,
        ],
        [
          1704090600000,
          68.612,
        ],
        [
          1704094200000,
          64.771,
        ],
        [
          1704097800000,
          62.737,
        ],
        [
          1704101400000,
          64.13000000000001,
        ],
        [
          1704105000000,
          69.565,
        ],
        [
          1704108600000,
          66.673,
        ],
        [
          1704112200000,
          64.576,
        ],
        [
          1704115800000,
          67.909,
        ],
        [
          1704119400000,
          71.921,
        ],
        [
          1704123000000,
          74.025,
        ],
        [
          1704126600000,
          72.782,
        ],
        [
          1704130200000,
          70.898,
        ],
        [
          1704133800000,
          74.782,
        ],
        [
          1704137400000,
          75.99,
        ],
        [
          1704141000000,
          39.179,
        ],
        [
          1704144600000,
          70.639,
        ],
        [
          1704148200000,
          70.922,
        ],
        [
          1704151800000,
          36.16,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "solar",
      "itemStyle": {
        "borderColor": "#ff9800",
        "color": "rgba(255, 152, 0, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "secondaryIds": [],
    },
    {
      "id": "grid",
      "itemStyle": {
        "borderColor": "#488fc2",
        "color": "rgba(72, 143, 194, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "secondaryIds": [
        "grid-negative",
      ],
    },
    {
      "id": "battery",
      "itemStyle": {
        "borderColor": "#4db6ac",
        "color": "rgba(77, 182, 172, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "secondaryIds": [
        "battery-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;

exports[`generatePowerSourcesGraphData > large multi-day 5-minute payload digest is stable 1`] = `
{
  "keys": [
    "chartData",
    "end",
    "legendData",
    "start",
    "yAxisFractionDigits",
  ],
  "numberCount": 48435,
  "numberSum": "4.12394250245e+16",
  "type": "object",
}
`;

exports[`generatePowerSourcesGraphData > matches snapshot for grid + solar + battery (hour) 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(255, 152, 0, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(255, 152, 0, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#ff9800",
      "data": [
        {
          "value": [
            1704069000000,
            24.057,
          ],
        },
        {
          "value": [
            1704072600000,
            25.953,
          ],
        },
        {
          "value": [
            1704076200000,
            26.643,
          ],
        },
        {
          "value": [
            1704079800000,
            24.721,
          ],
        },
        {
          "value": [
            1704083400000,
            24.639,
          ],
        },
        {
          "value": [
            1704087000000,
            25.541,
          ],
        },
        {
          "value": [
            1704090600000,
            25.04,
          ],
        },
        {
          "value": [
            1704094200000,
            23.906,
          ],
        },
        {
          "value": [
            1704097800000,
            25.123,
          ],
        },
        {
          "value": [
            1704101400000,
            24.771,
          ],
        },
        {
          "value": [
            1704105000000,
            26.477,
          ],
        },
        {
          "value": [
            1704108600000,
            26.544,
          ],
        },
        {
          "value": [
            1704112200000,
            27.68,
          ],
        },
        {
          "value": [
            1704115800000,
            28.069,
          ],
        },
        {
          "value": [
            1704119400000,
            27.04,
          ],
        },
        {
          "value": [
            1704123000000,
            27.607,
          ],
        },
        {
          "value": [
            1704126600000,
            26.013,
          ],
        },
        {
          "value": [
            1704130200000,
            24.921,
          ],
        },
        {
          "value": [
            1704133800000,
            26.772,
          ],
        },
        {
          "value": [
            1704137400000,
            26.597,
          ],
        },
        {
          "value": [
            1704141000000,
            25.325,
          ],
        },
        {
          "value": [
            1704144600000,
            25.244,
          ],
        },
        {
          "value": [
            1704148200000,
            25.678,
          ],
        },
        [
          1704151800000,
          0,
        ],
      ],
      "id": "solar",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 3,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            27.099,
          ],
        },
        {
          "value": [
            1704072600000,
            27.264,
          ],
        },
        {
          "value": [
            1704076200000,
            25.465,
          ],
        },
        {
          "value": [
            1704079800000,
            26.192,
          ],
        },
        {
          "value": [
            1704083400000,
            28.116,
          ],
        },
        {
          "value": [
            1704087000000,
            26.56,
          ],
        },
        {
          "value": [
            1704090600000,
            27.469,
          ],
        },
        {
          "value": [
            1704094200000,
            28.52,
          ],
        },
        {
          "value": [
            1704097800000,
            30.326,
          ],
        },
        {
          "value": [
            1704101400000,
            28.49,
          ],
        },
        {
          "value": [
            1704105000000,
            28.107,
          ],
        },
        {
          "value": [
            1704108600000,
            27.029,
          ],
        },
        {
          "value": [
            1704112200000,
            25.778,
          ],
        },
        {
          "value": [
            1704115800000,
            25.605,
          ],
        },
        {
          "value": [
            1704119400000,
            27.22,
          ],
        },
        {
          "value": [
            1704123000000,
            28.178,
          ],
        },
        {
          "value": [
            1704126600000,
            27.321,
          ],
        },
        {
          "value": [
            1704130200000,
            25.453,
          ],
        },
        {
          "value": [
            1704133800000,
            26.571,
          ],
        },
        {
          "value": [
            1704137400000,
            26.765,
          ],
        },
        {
          "value": [
            1704141000000,
            25.226,
          ],
        },
        {
          "value": [
            1704144600000,
            26.221,
          ],
        },
        {
          "value": [
            1704148200000,
            27.301,
          ],
        },
        {
          "value": [
            1704151800000,
            27.216,
          ],
        },
      ],
      "id": "battery",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 2,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            21.519,
          ],
        },
        {
          "value": [
            1704072600000,
            22.292,
          ],
        },
        {
          "value": [
            1704076200000,
            21.207,
          ],
        },
        {
          "value": [
            1704079800000,
            22.383,
          ],
        },
        {
          "value": [
            1704083400000,
            22.287,
          ],
        },
        {
          "value": [
            1704087000000,
            21.958,
          ],
        },
        {
          "value": [
            1704090600000,
            23,
          ],
        },
        {
          "value": [
            1704094200000,
            23.589,
          ],
        },
        {
          "value": [
            1704097800000,
            21.799,
          ],
        },
        {
          "value": [
            1704101400000,
            21.54,
          ],
        },
        {
          "value": [
            1704105000000,
            22.049,
          ],
        },
        {
          "value": [
            1704108600000,
            20.632,
          ],
        },
        [
          1704112200000,
          0,
        ],
        {
          "value": [
            1704115800000,
            19.123,
          ],
        },
        {
          "value": [
            1704119400000,
            20.954,
          ],
        },
        {
          "value": [
            1704123000000,
            22.034,
          ],
        },
        {
          "value": [
            1704126600000,
            20.895,
          ],
        },
        {
          "value": [
            1704130200000,
            19.472,
          ],
        },
        {
          "value": [
            1704133800000,
            21.271,
          ],
        },
        {
          "value": [
            1704137400000,
            22.32,
          ],
        },
        {
          "value": [
            1704141000000,
            22.829,
          ],
        },
        {
          "value": [
            1704144600000,
            24.335,
          ],
        },
        {
          "value": [
            1704148200000,
            22.975,
          ],
        },
        {
          "value": [
            1704151800000,
            23.549,
          ],
        },
      ],
      "id": "grid",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 1,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "battery-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 4,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        [
          1704112200000,
          0,
        ],
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "grid-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 3,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          72.675,
        ],
        [
          1704072600000,
          75.509,
        ],
        [
          1704076200000,
          73.315,
        ],
        [
          1704079800000,
          73.29599999999999,
        ],
        [
          1704083400000,
          75.042,
        ],
        [
          1704087000000,
          74.059,
        ],
        [
          1704090600000,
          75.509,
        ],
        [
          1704094200000,
          76.015,
        ],
        [
          1704097800000,
          77.24799999999999,
        ],
        [
          1704101400000,
          74.80099999999999,
        ],
        [
          1704105000000,
          76.63300000000001,
        ],
        [
          1704108600000,
          74.205,
        ],
        [
          1704112200000,
          53.458,
        ],
        [
          1704115800000,
          72.797,
        ],
        [
          1704119400000,
          75.214,
        ],
        [
          1704123000000,
          77.81899999999999,
        ],
        [
          1704126600000,
          74.229,
        ],
        [
          1704130200000,
          69.846,
        ],
        [
          1704133800000,
          74.614,
        ],
        [
          1704137400000,
          75.682,
        ],
        [
          1704141000000,
          73.38,
        ],
        [
          1704144600000,
          75.80000000000001,
        ],
        [
          1704148200000,
          75.95400000000001,
        ],
        [
          1704151800000,
          50.765,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "solar",
      "itemStyle": {
        "borderColor": "#ff9800",
        "color": "rgba(255, 152, 0, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "secondaryIds": [],
    },
    {
      "id": "grid",
      "itemStyle": {
        "borderColor": "#488fc2",
        "color": "rgba(72, 143, 194, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "secondaryIds": [
        "grid-negative",
      ],
    },
    {
      "id": "battery",
      "itemStyle": {
        "borderColor": "#4db6ac",
        "color": "rgba(77, 182, 172, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "secondaryIds": [
        "battery-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;

exports[`generatePowerSourcesGraphData > matches snapshot for grid-only (hour) 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            27.905,
          ],
        },
        {
          "value": [
            1704072600000,
            28.74,
          ],
        },
        {
          "value": [
            1704076200000,
            28.703,
          ],
        },
        {
          "value": [
            1704079800000,
            30.389,
          ],
        },
        {
          "value": [
            1704083400000,
            31.226,
          ],
        },
        {
          "value": [
            1704087000000,
            31.605,
          ],
        },
        {
          "value": [
            1704090600000,
            32.274,
          ],
        },
        {
          "value": [
            1704094200000,
            32.211,
          ],
        },
        {
          "value": [
            1704097800000,
            31.31,
          ],
        },
        {
          "value": [
            1704101400000,
            32.237,
          ],
        },
        {
          "value": [
            1704105000000,
            32.199,
          ],
        },
        {
          "value": [
            1704108600000,
            30.65,
          ],
        },
        {
          "value": [
            1704112200000,
            29.094,
          ],
        },
        {
          "value": [
            1704115800000,
            28.761,
          ],
        },
        {
          "value": [
            1704119400000,
            28.549,
          ],
        },
        {
          "value": [
            1704123000000,
            27.49,
          ],
        },
        {
          "value": [
            1704126600000,
            29.343,
          ],
        },
        {
          "value": [
            1704130200000,
            31.017,
          ],
        },
        {
          "value": [
            1704133800000,
            31.863,
          ],
        },
        {
          "value": [
            1704137400000,
            30.458,
          ],
        },
        {
          "value": [
            1704141000000,
            29.621,
          ],
        },
        {
          "value": [
            1704144600000,
            28.838,
          ],
        },
        {
          "value": [
            1704148200000,
            28.965,
          ],
        },
        {
          "value": [
            1704151800000,
            27.345,
          ],
        },
      ],
      "id": "grid",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 1,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "grid-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 3,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          27.905,
        ],
        [
          1704072600000,
          28.74,
        ],
        [
          1704076200000,
          28.703,
        ],
        [
          1704079800000,
          30.389,
        ],
        [
          1704083400000,
          31.226,
        ],
        [
          1704087000000,
          31.605,
        ],
        [
          1704090600000,
          32.274,
        ],
        [
          1704094200000,
          32.211,
        ],
        [
          1704097800000,
          31.31,
        ],
        [
          1704101400000,
          32.237,
        ],
        [
          1704105000000,
          32.199,
        ],
        [
          1704108600000,
          30.65,
        ],
        [
          1704112200000,
          29.094,
        ],
        [
          1704115800000,
          28.761,
        ],
        [
          1704119400000,
          28.549,
        ],
        [
          1704123000000,
          27.49,
        ],
        [
          1704126600000,
          29.343,
        ],
        [
          1704130200000,
          31.017,
        ],
        [
          1704133800000,
          31.863,
        ],
        [
          1704137400000,
          30.458,
        ],
        [
          1704141000000,
          29.621,
        ],
        [
          1704144600000,
          28.838,
        ],
        [
          1704148200000,
          28.965,
        ],
        [
          1704151800000,
          27.345,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "grid",
      "itemStyle": {
        "borderColor": "#488fc2",
        "color": "rgba(72, 143, 194, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "secondaryIds": [
        "grid-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;

exports[`generatePowerSourcesGraphData > matches snapshot for solar + battery, no grid (hour) 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(255, 152, 0, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(255, 152, 0, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#ff9800",
      "data": [
        {
          "value": [
            1704069000000,
            21.398,
          ],
        },
        {
          "value": [
            1704072600000,
            20.237,
          ],
        },
        {
          "value": [
            1704076200000,
            21.204,
          ],
        },
        {
          "value": [
            1704079800000,
            19.543,
          ],
        },
        {
          "value": [
            1704083400000,
            19.022,
          ],
        },
        {
          "value": [
            1704087000000,
            19.609,
          ],
        },
        {
          "value": [
            1704090600000,
            21.026,
          ],
        },
        {
          "value": [
            1704094200000,
            21.482,
          ],
        },
        {
          "value": [
            1704097800000,
            19.965,
          ],
        },
        {
          "value": [
            1704101400000,
            21.303,
          ],
        },
        {
          "value": [
            1704105000000,
            19.912,
          ],
        },
        {
          "value": [
            1704108600000,
            18.229,
          ],
        },
        {
          "value": [
            1704112200000,
            19.601,
          ],
        },
        {
          "value": [
            1704115800000,
            20.201,
          ],
        },
        {
          "value": [
            1704119400000,
            19.586,
          ],
        },
        {
          "value": [
            1704123000000,
            18.333,
          ],
        },
        {
          "value": [
            1704126600000,
            19.495,
          ],
        },
        {
          "value": [
            1704130200000,
            19.195,
          ],
        },
        {
          "value": [
            1704133800000,
            17.306,
          ],
        },
        {
          "value": [
            1704137400000,
            18.147,
          ],
        },
        {
          "value": [
            1704141000000,
            19.268,
          ],
        },
        {
          "value": [
            1704144600000,
            20.163,
          ],
        },
        {
          "value": [
            1704148200000,
            19.545,
          ],
        },
        {
          "value": [
            1704151800000,
            19.23,
          ],
        },
      ],
      "id": "solar",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 3,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            25.203,
          ],
        },
        {
          "value": [
            1704072600000,
            24.607,
          ],
        },
        {
          "value": [
            1704076200000,
            23.417,
          ],
        },
        {
          "value": [
            1704079800000,
            22.967,
          ],
        },
        {
          "value": [
            1704083400000,
            22.194,
          ],
        },
        {
          "value": [
            1704087000000,
            21.569,
          ],
        },
        {
          "value": [
            1704090600000,
            22.758,
          ],
        },
        {
          "value": [
            1704094200000,
            23.358,
          ],
        },
        {
          "value": [
            1704097800000,
            23.084,
          ],
        },
        {
          "value": [
            1704101400000,
            21.941,
          ],
        },
        {
          "value": [
            1704105000000,
            20.345,
          ],
        },
        {
          "value": [
            1704108600000,
            18.616,
          ],
        },
        {
          "value": [
            1704112200000,
            16.697,
          ],
        },
        {
          "value": [
            1704115800000,
            17.031,
          ],
        },
        {
          "value": [
            1704119400000,
            16.421,
          ],
        },
        {
          "value": [
            1704123000000,
            16.922,
          ],
        },
        {
          "value": [
            1704126600000,
            15.029,
          ],
        },
        {
          "value": [
            1704130200000,
            16.438,
          ],
        },
        {
          "value": [
            1704133800000,
            17.85,
          ],
        },
        {
          "value": [
            1704137400000,
            16.778,
          ],
        },
        {
          "value": [
            1704141000000,
            17.882,
          ],
        },
        {
          "value": [
            1704144600000,
            17.348,
          ],
        },
        {
          "value": [
            1704148200000,
            15.649,
          ],
        },
        {
          "value": [
            1704151800000,
            16.762,
          ],
        },
      ],
      "id": "battery",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 2,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "battery-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 4,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          46.601,
        ],
        [
          1704072600000,
          44.843999999999994,
        ],
        [
          1704076200000,
          44.621,
        ],
        [
          1704079800000,
          42.51,
        ],
        [
          1704083400000,
          41.215999999999994,
        ],
        [
          1704087000000,
          41.178,
        ],
        [
          1704090600000,
          43.784,
        ],
        [
          1704094200000,
          44.84,
        ],
        [
          1704097800000,
          43.049,
        ],
        [
          1704101400000,
          43.244,
        ],
        [
          1704105000000,
          40.257,
        ],
        [
          1704108600000,
          36.845,
        ],
        [
          1704112200000,
          36.298,
        ],
        [
          1704115800000,
          37.232,
        ],
        [
          1704119400000,
          36.007,
        ],
        [
          1704123000000,
          35.254999999999995,
        ],
        [
          1704126600000,
          34.524,
        ],
        [
          1704130200000,
          35.632999999999996,
        ],
        [
          1704133800000,
          35.156000000000006,
        ],
        [
          1704137400000,
          34.925,
        ],
        [
          1704141000000,
          37.150000000000006,
        ],
        [
          1704144600000,
          37.510999999999996,
        ],
        [
          1704148200000,
          35.194,
        ],
        [
          1704151800000,
          35.992000000000004,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "solar",
      "itemStyle": {
        "borderColor": "#ff9800",
        "color": "rgba(255, 152, 0, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "secondaryIds": [],
    },
    {
      "id": "battery",
      "itemStyle": {
        "borderColor": "#4db6ac",
        "color": "rgba(77, 182, 172, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "secondaryIds": [
        "battery-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;

exports[`generatePowerSourcesGraphData > matches snapshot with compare period 1`] = `
{
  "chartData": [
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(255, 152, 0, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(255, 152, 0, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#ff9800",
      "data": [
        {
          "value": [
            1704069000000,
            20.655,
          ],
        },
        {
          "value": [
            1704072600000,
            19.623,
          ],
        },
        {
          "value": [
            1704076200000,
            21.107,
          ],
        },
        {
          "value": [
            1704079800000,
            20.342,
          ],
        },
        {
          "value": [
            1704083400000,
            19.655,
          ],
        },
        {
          "value": [
            1704087000000,
            20.432,
          ],
        },
        {
          "value": [
            1704090600000,
            20.583,
          ],
        },
        {
          "value": [
            1704094200000,
            18.615,
          ],
        },
        {
          "value": [
            1704097800000,
            18.798,
          ],
        },
        {
          "value": [
            1704101400000,
            18.659,
          ],
        },
        {
          "value": [
            1704105000000,
            19.262,
          ],
        },
        {
          "value": [
            1704108600000,
            19.874,
          ],
        },
        {
          "value": [
            1704112200000,
            19.278,
          ],
        },
        {
          "value": [
            1704115800000,
            20.394,
          ],
        },
        {
          "value": [
            1704119400000,
            20.661,
          ],
        },
        {
          "value": [
            1704123000000,
            21.279,
          ],
        },
        {
          "value": [
            1704126600000,
            21.651,
          ],
        },
        {
          "value": [
            1704130200000,
            22.164,
          ],
        },
        {
          "value": [
            1704133800000,
            22.089,
          ],
        },
        {
          "value": [
            1704137400000,
            22.516,
          ],
        },
        {
          "value": [
            1704141000000,
            20.898,
          ],
        },
        {
          "value": [
            1704144600000,
            21.505,
          ],
        },
        {
          "value": [
            1704148200000,
            21.427,
          ],
        },
        {
          "value": [
            1704151800000,
            22.152,
          ],
        },
      ],
      "id": "solar",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 3,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            22.506,
          ],
        },
        {
          "value": [
            1704072600000,
            22.535,
          ],
        },
        {
          "value": [
            1704076200000,
            21.994,
          ],
        },
        {
          "value": [
            1704079800000,
            23.127,
          ],
        },
        {
          "value": [
            1704083400000,
            21.756,
          ],
        },
        {
          "value": [
            1704087000000,
            20.085,
          ],
        },
        {
          "value": [
            1704090600000,
            21.385,
          ],
        },
        {
          "value": [
            1704094200000,
            21.263,
          ],
        },
        {
          "value": [
            1704097800000,
            21.219,
          ],
        },
        {
          "value": [
            1704101400000,
            22.565,
          ],
        },
        {
          "value": [
            1704105000000,
            20.812,
          ],
        },
        {
          "value": [
            1704108600000,
            19.895,
          ],
        },
        {
          "value": [
            1704112200000,
            20.747,
          ],
        },
        {
          "value": [
            1704115800000,
            21.684,
          ],
        },
        {
          "value": [
            1704119400000,
            20.392,
          ],
        },
        {
          "value": [
            1704123000000,
            20.091,
          ],
        },
        {
          "value": [
            1704126600000,
            19.593,
          ],
        },
        {
          "value": [
            1704130200000,
            20.048,
          ],
        },
        {
          "value": [
            1704133800000,
            18.365,
          ],
        },
        {
          "value": [
            1704137400000,
            20.067,
          ],
        },
        {
          "value": [
            1704141000000,
            19.864,
          ],
        },
        {
          "value": [
            1704144600000,
            19.596,
          ],
        },
        {
          "value": [
            1704148200000,
            19.829,
          ],
        },
        {
          "value": [
            1704151800000,
            21.22,
          ],
        },
      ],
      "id": "battery",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 2,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 0,
          "y2": 1,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            30.86,
          ],
        },
        {
          "value": [
            1704072600000,
            29.023,
          ],
        },
        {
          "value": [
            1704076200000,
            27.797,
          ],
        },
        {
          "value": [
            1704079800000,
            28.322,
          ],
        },
        {
          "value": [
            1704083400000,
            28.532,
          ],
        },
        {
          "value": [
            1704087000000,
            30.312,
          ],
        },
        {
          "value": [
            1704090600000,
            30.994,
          ],
        },
        {
          "value": [
            1704094200000,
            29.752,
          ],
        },
        {
          "value": [
            1704097800000,
            31.742,
          ],
        },
        {
          "value": [
            1704101400000,
            33.566,
          ],
        },
        {
          "value": [
            1704105000000,
            34.85,
          ],
        },
        {
          "value": [
            1704108600000,
            36.389,
          ],
        },
        {
          "value": [
            1704112200000,
            34.785,
          ],
        },
        {
          "value": [
            1704115800000,
            33.357,
          ],
        },
        {
          "value": [
            1704119400000,
            33.574,
          ],
        },
        {
          "value": [
            1704123000000,
            35.366,
          ],
        },
        {
          "value": [
            1704126600000,
            36.312,
          ],
        },
        {
          "value": [
            1704130200000,
            34.575,
          ],
        },
        {
          "value": [
            1704133800000,
            33.644,
          ],
        },
        {
          "value": [
            1704137400000,
            33.295,
          ],
        },
        {
          "value": [
            1704141000000,
            34.305,
          ],
        },
        {
          "value": [
            1704144600000,
            33.691,
          ],
        },
        {
          "value": [
            1704148200000,
            35.513,
          ],
        },
        {
          "value": [
            1704151800000,
            34.726,
          ],
        },
      ],
      "id": "grid",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "positive",
      "type": "line",
      "z": 1,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(77, 182, 172, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(77, 182, 172, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#4db6ac",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "battery-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 4,
    },
    {
      "areaStyle": {
        "color": LinearGradient {
          "colorStops": [
            {
              "color": "rgba(72, 143, 194, 0.75)",
              "offset": 0,
            },
            {
              "color": "rgba(72, 143, 194, 0.25)",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "color": "#488fc2",
      "data": [
        {
          "value": [
            1704069000000,
            0,
          ],
        },
        {
          "value": [
            1704072600000,
            0,
          ],
        },
        {
          "value": [
            1704076200000,
            0,
          ],
        },
        {
          "value": [
            1704079800000,
            0,
          ],
        },
        {
          "value": [
            1704083400000,
            0,
          ],
        },
        {
          "value": [
            1704087000000,
            0,
          ],
        },
        {
          "value": [
            1704090600000,
            0,
          ],
        },
        {
          "value": [
            1704094200000,
            0,
          ],
        },
        {
          "value": [
            1704097800000,
            0,
          ],
        },
        {
          "value": [
            1704101400000,
            0,
          ],
        },
        {
          "value": [
            1704105000000,
            0,
          ],
        },
        {
          "value": [
            1704108600000,
            0,
          ],
        },
        {
          "value": [
            1704112200000,
            0,
          ],
        },
        {
          "value": [
            1704115800000,
            0,
          ],
        },
        {
          "value": [
            1704119400000,
            0,
          ],
        },
        {
          "value": [
            1704123000000,
            0,
          ],
        },
        {
          "value": [
            1704126600000,
            0,
          ],
        },
        {
          "value": [
            1704130200000,
            0,
          ],
        },
        {
          "value": [
            1704133800000,
            0,
          ],
        },
        {
          "value": [
            1704137400000,
            0,
          ],
        },
        {
          "value": [
            1704141000000,
            0,
          ],
        },
        {
          "value": [
            1704144600000,
            0,
          ],
        },
        {
          "value": [
            1704148200000,
            0,
          ],
        },
        {
          "value": [
            1704151800000,
            0,
          ],
        },
      ],
      "id": "grid-negative",
      "lineStyle": {
        "width": 1,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "smooth": 0.4,
      "stack": "negative",
      "type": "line",
      "z": 3,
    },
    {
      "color": "#212121",
      "data": [
        [
          1704069000000,
          74.021,
        ],
        [
          1704072600000,
          71.181,
        ],
        [
          1704076200000,
          70.898,
        ],
        [
          1704079800000,
          71.791,
        ],
        [
          1704083400000,
          69.943,
        ],
        [
          1704087000000,
          70.829,
        ],
        [
          1704090600000,
          72.962,
        ],
        [
          1704094200000,
          69.63,
        ],
        [
          1704097800000,
          71.759,
        ],
        [
          1704101400000,
          74.79,
        ],
        [
          1704105000000,
          74.924,
        ],
        [
          1704108600000,
          76.158,
        ],
        [
          1704112200000,
          74.81,
        ],
        [
          1704115800000,
          75.435,
        ],
        [
          1704119400000,
          74.627,
        ],
        [
          1704123000000,
          76.736,
        ],
        [
          1704126600000,
          77.556,
        ],
        [
          1704130200000,
          76.787,
        ],
        [
          1704133800000,
          74.09799999999998,
        ],
        [
          1704137400000,
          75.878,
        ],
        [
          1704141000000,
          75.06700000000001,
        ],
        [
          1704144600000,
          74.792,
        ],
        [
          1704148200000,
          76.769,
        ],
        [
          1704151800000,
          78.098,
        ],
      ],
      "id": "usage",
      "lineStyle": {
        "type": [
          7,
          2,
        ],
        "width": 1.5,
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
      "smooth": 0.4,
      "type": "line",
      "z": 5,
    },
  ],
  "end": 2024-01-02T00:00:00.000Z,
  "legendData": [
    {
      "id": "solar",
      "itemStyle": {
        "borderColor": "#ff9800",
        "color": "rgba(255, 152, 0, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.solar",
      "secondaryIds": [],
    },
    {
      "id": "grid",
      "itemStyle": {
        "borderColor": "#488fc2",
        "color": "rgba(72, 143, 194, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.grid",
      "secondaryIds": [
        "grid-negative",
      ],
    },
    {
      "id": "battery",
      "itemStyle": {
        "borderColor": "#4db6ac",
        "color": "rgba(77, 182, 172, 0.75)",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.battery",
      "secondaryIds": [
        "battery-negative",
      ],
    },
    {
      "id": "usage",
      "itemStyle": {
        "color": "#212121",
      },
      "name": "ui.panel.lovelace.cards.energy.power_graph.usage",
    },
  ],
  "start": 2024-01-01T00:00:00.000Z,
  "yAxisFractionDigits": 0,
}
`;
